Reenable death tests on Mac

Added testing::FLAGS_gtest_death_test_style = "threadsafe" to avoid
flakiness and gtest warnings like:
../../testing/gtest/src/gtest-death-test.cc:834:: Death tests use
fork(), which is unsafe particularly in a threaded context. For this
test, Google Test detected 5 threads.

References:
Gtest documentation about the flag:
https://cs.chromium.org/chromium/src/third_party/googletest/src/googletest/docs/AdvancedGuide.md?q=FLAGS_gtest_death_test_style&sq=package:chromium&l=731&dr=C
Other usages of the flag in current code:
https://cs.chromium.org/search/?q=FLAGS_gtest_death_test_style&sq=package:chromium&type=cs

BUG=757036

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I9fbbc2b34a22ca83c812168597694340a415861a
Reviewed-on: https://chromium-review.googlesource.com/630240
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497146}
Former-commit-id: c4051e5e4e725690bc79319d0fbb6ea4cd01e6e7