third_party/WebKit/Source/core/layout/LayoutTestHelper.cpp
@@ -59,6 +59,9 @@ void RenderingTest::SetUp() {
   // This ensures that the minimal DOM tree gets attached
   // correctly for tests that don't call setBodyInnerHTML.
   GetDocument().View()->UpdateAllLifecyclePhases();
+
+  // Allow ASSERT_DEATH and EXPECT_DEATH for multiple threads.
+  ::testing::FLAGS_gtest_death_test_style = "threadsafe";
 }
 
 void RenderingTest::TearDown() {
