third_party/WebKit/Source/core/layout/LayoutTableRowTest.cpp
@@ -55,11 +55,8 @@ TEST_F(LayoutTableRowDeathTest, CanSetRowToMaxRowIndex) {
   EXPECT_EQ(kMaxRowIndex, row_->RowIndex());
 }
 
-// FIXME: Re-enable these tests once ASSERT_DEATH is supported for Android.
-// See: https://bugs.webkit.org/show_bug.cgi?id=74089
-// TODO(dgrogan): These tests started flaking on Mac try bots around 2016-07-28.
-// https://crbug.com/632816
-#if !defined(OS_ANDROID) && !defined(OS_MACOSX)
+// Death tests don't work properly on Android.
+#if defined(GTEST_HAS_DEATH_TEST) && !defined(OS_ANDROID)
 
 TEST_F(LayoutTableRowDeathTest, CrashIfRowOverflowOnSetting) {
   ASSERT_DEATH(row_->SetRowIndex(kMaxRowIndex + 1), "");
